Source/hedgehog/fds_fortran_interface.h

// Thread-safe kernel wrappers (bypass orchestration, call kernels directly)
void fds_velocity_predictor_kernel(int nm, double t, double dt);
void fds_velocity_predictor_kernel_only(int nm, double dt);
void fds_check_stability_kernel_only(int nm, double t, double dt);
void fds_velocity_corrector_kernel(int nm, double t, double dt);
void fds_check_divergence_kernel(int nm);
void fds_divergence_part_2_kernel(int nm, double dt);
void fds_compute_viscosity_kernel(int nm, int estimated);
void fds_mass_finite_differences_kernel(int nm);
void fds_density_kernel(int nm, double t, double dt);
void fds_divergence_part_1_kernel(int nm, double t, double dt);
void fds_velocity_flux_kernel(int nm, double t, double dt, int estimated);
void fds_particle_momentum_kernel(int nm, double dt);
void fds_viscosity_bc_kernel(int nm, int estimated);
void fds_combustion_bc_kernel(int nm);
void fds_condensation_kernel(int nm, double dt);
void fds_wall_bc_preprocessing(int nm, double t, double dt_bc, int call_ht_1d);
void fds_wall_bc_preprocessing_kernel(int nm, double t, double dt_bc, int call_ht_1d);
void fds_move_particles(double t, double dt, int nm);
void fds_compute_radiation(double t, int nm, int rad_iter);
void fds_compute_radiation_kernel(int nm, double t, int rad_iter,
    double* rad_q_sum_out, double* kfst4_sum_out);
void fds_agglomeration(double dt, int nm);
void fds_cc_end_step(double t, double dt, int diag);
void fds_check_divergence(int nm);