Source/hedgehog/fds_c_interface.f90


SUBROUTINE C_FDS_MOVE_PARTICLES(T, DT, NM) BIND(C, NAME="fds_move_particles")
    REAL(C_DOUBLE), VALUE :: T, DT
    INTEGER(C_INT), VALUE :: NM
    CALL MOVE_PARTICLES(T, DT, NM)
END SUBROUTINE C_FDS_MOVE_PARTICLES

SUBROUTINE C_FDS_COMPUTE_RADIATION(T, NM, RAD_ITER) BIND(C, NAME="fds_compute_radiation")
    REAL(C_DOUBLE), VALUE :: T
    INTEGER(C_INT), VALUE :: NM, RAD_ITER
    CALL COMPUTE_RADIATION(T, NM, RAD_ITER)
END SUBROUTINE C_FDS_COMPUTE_RADIATION

RECURSIVE SUBROUTINE C_FDS_COMPUTE_RADIATION_KERNEL(NM, T, RAD_ITER, &
    RAD_Q_SUM_OUT, KFST4_SUM_OUT) BIND(C, NAME="fds_compute_radiation_kernel")
    USE RAD, ONLY: COMPUTE_RADIATION_KERNEL
    USE MESH_VARIABLES, ONLY: MESHES
    INTEGER(C_INT), VALUE :: NM, RAD_ITER
    REAL(C_DOUBLE), VALUE :: T
    REAL(C_DOUBLE), INTENT(INOUT) :: RAD_Q_SUM_OUT, KFST4_SUM_OUT
    CALL COMPUTE_RADIATION_KERNEL(MESHES(NM), NM, T, RAD_ITER, &
        RAD_Q_SUM_OUT, KFST4_SUM_OUT)
END SUBROUTINE C_FDS_COMPUTE_RADIATION_KERNEL

SUBROUTINE C_FDS_AGGLOMERATION(DT, NM) BIND(C, NAME="fds_agglomeration")
    REAL(C_DOUBLE), VALUE :: DT
    INTEGER(C_INT), VALUE :: NM
    IF (N_AGGLOMERATION_SPECIES > 0) CALL CALC_AGGLOMERATION(MESHES(NM), DT, NM)
END SUBROUTINE C_FDS_AGGLOMERATION

SUBROUTINE C_FDS_CC_END_STEP(T, DT, DIAG) BIND(C, NAME="fds_cc_end_step")
    REAL(C_DOUBLE), VALUE :: T, DT
    INTEGER(C_INT), VALUE :: DIAG
    IF (CC_IBM) CALL CC_END_STEP(T, DT, (DIAG/=0))
END SUBROUTINE C_FDS_CC_END_STEP

SUBROUTINE C_FDS_CHECK_DIVERGENCE(NM) BIND(C, NAME="fds_check_divergence")
    INTEGER(C_INT), VALUE :: NM
    CALL CHECK_DIVERGENCE(NM)
END SUBROUTINE C_FDS_CHECK_DIVERGENCE

!==============================================================================
! Thread-safe kernel wrappers (bypass orchestration, call kernels directly)
! RECURSIVE keyword ensures thread-safety (does not propagate to callees)
!==============================================================================

RECURSIVE SUBROUTINE C_FDS_VELOCITY_CORRECTOR_KERNEL(NM, T, DT) BIND(C, NAME="fds_velocity_corrector_kernel")
    USE VELO_KERNELS, ONLY: VELOCITY_CORRECTOR_KERNEL
    USE MESH_VARIABLES, ONLY: MESHES
    INTEGER(C_INT), VALUE :: NM
    REAL(C_DOUBLE), VALUE :: T, DT
    ! Call kernel directly without POINT_TO_MESH - thread-safe
    CALL VELOCITY_CORRECTOR_KERNEL(MESHES(NM), DT)
END SUBROUTINE C_FDS_VELOCITY_CORRECTOR_KERNEL

RECURSIVE SUBROUTINE C_FDS_VELOCITY_PREDICTOR_KERNEL(NM, T, DT) BIND(C, NAME="fds_velocity_predictor_kernel")
    USE VELO_KERNELS, ONLY: VELOCITY_PREDICTOR_KERNEL, &
                            CHECK_STABILITY_KERNEL
    USE MESH_VARIABLES, ONLY: MESHES
    INTEGER(C_INT), VALUE :: NM
    REAL(C_DOUBLE), VALUE :: T, DT
    IF (SOLID_PHASE_ONLY) RETURN
    ! Call kernels directly without POINT_TO_MESH - thread-safe
    CALL VELOCITY_PREDICTOR_KERNEL(MESHES(NM), DT)
    CALL CHECK_STABILITY_KERNEL( &
        MESHES(NM), DT, DT_NEW(NM), T, NM)
    ! Instability check (matches velo.f90:613-614)
    IF (DT_NEW(NM)<DT_INITIAL*LIMITING_DT_RATIO &
        .AND. (T+DT_NEW(NM)<(T_END-TWENTY_EPSILON_EB))) &
        STOP_STATUS = INSTABILITY_STOP
END SUBROUTINE C_FDS_VELOCITY_PREDICTOR_KERNEL

!> Velocity predictor kernel only (no CFL check).
!> Used for CC_IBM cases where CHECK_STABILITY must run AFTER
!> CC_PROJECT_VELOCITY and WALL_VELOCITY_NO_GRADH.
RECURSIVE SUBROUTINE C_FDS_VELOCITY_PREDICTOR_KERNEL_ONLY(NM, DT) &
    BIND(C, NAME="fds_velocity_predictor_kernel_only")
    USE VELO_KERNELS, ONLY: VELOCITY_PREDICTOR_KERNEL
    USE MESH_VARIABLES, ONLY: MESHES
    INTEGER(C_INT), VALUE :: NM
    REAL(C_DOUBLE), VALUE :: DT
    IF (SOLID_PHASE_ONLY) RETURN
    CALL VELOCITY_PREDICTOR_KERNEL(MESHES(NM), DT)
END SUBROUTINE C_FDS_VELOCITY_PREDICTOR_KERNEL_ONLY

!> Standalone CFL stability check.
!> Used after CC_PROJECT_VELOCITY + WALL_VELOCITY_NO_GRADH for CC_IBM.
SUBROUTINE C_FDS_CHECK_STABILITY_KERNEL(NM, T, DT) &
    BIND(C, NAME="fds_check_stability_kernel_only")
    USE VELO_KERNELS, ONLY: CHECK_STABILITY_KERNEL
    USE MESH_VARIABLES, ONLY: MESHES
    INTEGER(C_INT), VALUE :: NM
    REAL(C_DOUBLE), VALUE :: T, DT
    IF (SOLID_PHASE_ONLY) RETURN
    CALL CHECK_STABILITY_KERNEL( &
        MESHES(NM), DT, DT_NEW(NM), T, NM)
    IF (DT_NEW(NM)<DT_INITIAL*LIMITING_DT_RATIO &
        .AND. (T+DT_NEW(NM)<(T_END-TWENTY_EPSILON_EB))) &
        STOP_STATUS = INSTABILITY_STOP
END SUBROUTINE C_FDS_CHECK_STABILITY_KERNEL

RECURSIVE SUBROUTINE C_FDS_CHECK_DIVERGENCE_KERNEL(NM) BIND(C, NAME="fds_check_divergence_kernel")
    USE DIVG_KERNELS, ONLY: CHECK_DIVERGENCE_KERNEL
    USE MESH_VARIABLES, ONLY: MESHES
    INTEGER(C_INT), VALUE :: NM
    ! Call kernel directly without POINT_TO_MESH - thread-safe
    CALL CHECK_DIVERGENCE_KERNEL(MESHES(NM))
END SUBROUTINE C_FDS_CHECK_DIVERGENCE_KERNEL

RECURSIVE SUBROUTINE C_FDS_DIVERGENCE_PART_2_KERNEL(NM, DT) BIND(C, NAME="fds_divergence_part_2_kernel")
    USE DIVG_KERNELS, ONLY: DIVERGENCE_PART_2_KERNEL
    USE MESH_VARIABLES, ONLY: MESHES
    INTEGER(C_INT), VALUE :: NM
    REAL(C_DOUBLE), VALUE :: DT
    ! Call kernel directly without POINT_TO_MESH - thread-safe
    CALL DIVERGENCE_PART_2_KERNEL(MESHES(NM), DT, NM)
END SUBROUTINE C_FDS_DIVERGENCE_PART_2_KERNEL

RECURSIVE SUBROUTINE C_FDS_COMPUTE_VISCOSITY_KERNEL(NM, ESTIMATED) BIND(C, NAME="fds_compute_viscosity_kernel")
    USE VELO_KERNELS, ONLY: COMPUTE_VISCOSITY_KERNEL
    USE MESH_VARIABLES, ONLY: MESHES
    INTEGER(C_INT), VALUE :: NM, ESTIMATED
    CALL COMPUTE_VISCOSITY_KERNEL(MESHES(NM), NM, &
        APPLY_TO_ESTIMATED_VARIABLES=(ESTIMATED/=0))
END SUBROUTINE C_FDS_COMPUTE_VISCOSITY_KERNEL

RECURSIVE SUBROUTINE C_FDS_MASS_FINITE_DIFF_KERNEL(NM) BIND(C, NAME="fds_mass_finite_differences_kernel")
    USE MASS_KERNELS, ONLY: MASS_FINITE_DIFFERENCES_NEW_KERNEL
    USE MESH_VARIABLES, ONLY: MESHES
    INTEGER(C_INT), VALUE :: NM
    CALL MASS_FINITE_DIFFERENCES_NEW_KERNEL(MESHES(NM))
END SUBROUTINE C_FDS_MASS_FINITE_DIFF_KERNEL

RECURSIVE SUBROUTINE C_FDS_DENSITY_KERNEL(NM, T, DT) BIND(C, NAME="fds_density_kernel")
    USE MASS_KERNELS, ONLY: DENSITY_KERNEL
    USE MESH_VARIABLES, ONLY: MESHES
    INTEGER(C_INT), VALUE :: NM
    REAL(C_DOUBLE), VALUE :: T, DT
    CALL DENSITY_KERNEL(MESHES(NM), T, DT, NM)
END SUBROUTINE C_FDS_DENSITY_KERNEL

RECURSIVE SUBROUTINE C_FDS_DIVERGENCE_PART_1_KERNEL(NM, T, DT) BIND(C, NAME="fds_divergence_part_1_kernel")
    USE DIVG_KERNELS, ONLY: DIVERGENCE_PART_1_KERNEL
    USE MESH_VARIABLES, ONLY: MESHES
    INTEGER(C_INT), VALUE :: NM
    REAL(C_DOUBLE), VALUE :: T, DT
    CALL DIVERGENCE_PART_1_KERNEL(MESHES(NM), T, DT, NM)
END SUBROUTINE C_FDS_DIVERGENCE_PART_1_KERNEL

RECURSIVE SUBROUTINE C_FDS_VELOCITY_FLUX_KERNEL(NM, T, DT, &
    ESTIMATED) BIND(C, NAME="fds_velocity_flux_kernel")
    USE VELO_KERNELS, ONLY: VELOCITY_FLUX_KERNEL
    USE CC_VELOCITY_KERNELS, ONLY: CUTFACE_VELOCITIES, &
        CC_VELOCITY_FLUX
    USE MESH_VARIABLES, ONLY: MESHES
    INTEGER(C_INT), VALUE :: NM, ESTIMATED
    REAL(C_DOUBLE), VALUE :: T, DT
    LOGICAL :: EST_FLAG
    REAL(EB) :: GX(0:IBAR_MAX), GY(0:IBAR_MAX)
    REAL(EB) :: GZ(0:IBAR_MAX)
    REAL(EB), POINTER, DIMENSION(:,:,:) :: UU,VV,WW,RHOP
    EST_FLAG = (ESTIMATED /= 0)
    IF (CC_IBM) THEN
        IF (EST_FLAG) THEN
            UU => MESHES(NM)%US
            VV => MESHES(NM)%VS
            WW => MESHES(NM)%WS
            RHOP => MESHES(NM)%RHOS
        ELSE
            UU => MESHES(NM)%U
            VV => MESHES(NM)%V
            WW => MESHES(NM)%W
            RHOP => MESHES(NM)%RHO
        ENDIF
        CALL CUTFACE_VELOCITIES(MESHES(NM), UU, VV, WW, &
            CUTFACES=.TRUE.)
    ENDIF
    CALL VELOCITY_FLUX_KERNEL(MESHES(NM), T, DT, NM, &
        EST_FLAG, GX, GY, GZ)
    IF (CC_IBM) THEN
        CALL CUTFACE_VELOCITIES(MESHES(NM), UU, VV, WW, &
            CUTFACES=.FALSE.)
        CALL CC_VELOCITY_FLUX(MESHES(NM), DT, EST_FLAG, &
            RHOP, CORRECT_GRAV=.TRUE., &
            GX=GX, GY=GY, GZ=GZ)
    ENDIF
END SUBROUTINE C_FDS_VELOCITY_FLUX_KERNEL

SUBROUTINE C_FDS_VISCOSITY_BC_KERNEL(NM, ESTIMATED) &
    BIND(C, NAME="fds_viscosity_bc_kernel")
    USE VELO_KERNELS, ONLY: VISCOSITY_BC_KERNEL
    USE MESH_VARIABLES, ONLY: MESHES
    INTEGER(C_INT), VALUE :: NM, ESTIMATED
    CALL VISCOSITY_BC_KERNEL(MESHES(NM), NM, APPLY_TO_ESTIMATED_VARIABLES=(ESTIMATED/=0))
END SUBROUTINE C_FDS_VISCOSITY_BC_KERNEL

SUBROUTINE C_FDS_COMBUSTION_BC_KERNEL(NM) &
    BIND(C, NAME="fds_combustion_bc_kernel")
    USE FIRE_KERNELS, ONLY: COMBUSTION_BC_KERNEL
    USE MESH_VARIABLES, ONLY: MESHES
    INTEGER(C_INT), VALUE :: NM
    IF (N_REACTIONS>0 .OR. INIT_HRRPUV) CALL COMBUSTION_BC_KERNEL(MESHES(NM), NM)
END SUBROUTINE C_FDS_COMBUSTION_BC_KERNEL

RECURSIVE SUBROUTINE C_FDS_CONDENSATION_KERNEL(NM, DT) &
    BIND(C, NAME="fds_condensation_kernel")
    USE FIRE_KERNELS, ONLY: CONDENSATION_EVAPORATION_KERNEL
    USE MESH_VARIABLES, ONLY: MESHES
    INTEGER(C_INT), VALUE :: NM
    REAL(C_DOUBLE), VALUE :: DT
    IF (ANY(SPECIES_MIXTURE%CONDENSATION_SMIX_INDEX>0)) &
        CALL CONDENSATION_EVAPORATION_KERNEL(MESHES(NM), DT, NM)
END SUBROUTINE C_FDS_CONDENSATION_KERNEL

RECURSIVE SUBROUTINE C_FDS_PARTICLE_MOMENTUM_KERNEL(NM, DT) BIND(C, NAME="fds_particle_momentum_kernel")
    USE PART_KERNELS, ONLY: PARTICLE_MOMENTUM_TRANSFER_KERNEL
    USE MESH_VARIABLES, ONLY: MESHES
    INTEGER(C_INT), VALUE :: NM
    REAL(C_DOUBLE), VALUE :: DT
    IF (PARTICLE_DRAG) CALL PARTICLE_MOMENTUM_TRANSFER_KERNEL(MESHES(NM), DT, NM)
END SUBROUTINE C_FDS_PARTICLE_MOMENTUM_KERNEL

SUBROUTINE C_FDS_WALL_BC_PREPROCESSING(NM, T, DT_BC, CALL_HT_1D) &
    BIND(C, NAME="fds_wall_bc_preprocessing")
    USE WALL_ROUTINES, ONLY: WALL_BC_PREPROCESSING
    INTEGER(C_INT), VALUE :: NM, CALL_HT_1D
    REAL(C_DOUBLE), VALUE :: T, DT_BC
    LOGICAL :: HT_1D_FLAG
    HT_1D_FLAG = (CALL_HT_1D /= 0)
    CALL WALL_BC_PREPROCESSING(NM, T, DT_BC, HT_1D_FLAG)
END SUBROUTINE C_FDS_WALL_BC_PREPROCESSING

!> Thread-safe version of WALL_BC_PREPROCESSING using kernel routines.
!> Can be called from parallel kernel tasks (no POINT_TO_MESH dependency).
SUBROUTINE C_FDS_WALL_BC_PREPROCESSING_KERNEL(NM, T, DT_BC, CALL_HT_1D) &
    BIND(C, NAME="fds_wall_bc_preprocessing_kernel")
    USE WALL_KERNELS, ONLY: NEAR_SURFACE_GAS_VARIABLES_KERNEL, ASSIGN_GHOST_VALUE_KERNEL
    USE PHYSICAL_FUNCTIONS, ONLY: HEAT_TRANSFER_COEFFICIENT
    USE MESH_VARIABLES, ONLY: MESHES
    INTEGER(C_INT), VALUE :: NM, CALL_HT_1D
    REAL(C_DOUBLE), VALUE :: T, DT_BC
    LOGICAL :: HT_1D_FLAG, PRED_FLAG
    INTEGER :: IW, ITW
    TYPE(MESH_TYPE), POINTER :: M
    TYPE(WALL_TYPE), POINTER :: WC
    TYPE(THIN_WALL_TYPE), POINTER :: TW
    TYPE(SURFACE_TYPE), POINTER :: SF
    TYPE(BOUNDARY_COORD_TYPE), POINTER :: BC
    TYPE(BOUNDARY_PROP1_TYPE), POINTER :: B1

    HT_1D_FLAG = (CALL_HT_1D /= 0)
    PRED_FLAG = PREDICTOR
    M => MESHES(NM)

    DO IW=1,M%N_EXTERNAL_WALL_CELLS+M%N_INTERNAL_WALL_CELLS
       WC => M%WALL(IW)
       BC => M%BOUNDARY_COORD(WC%BC_INDEX)
       B1 => M%BOUNDARY_PROP1(WC%B1_INDEX)
       IF (IW<=M%N_EXTERNAL_WALL_CELLS) CALL ASSIGN_GHOST_VALUE_KERNEL(M,IW,BC,B1,PRED_FLAG)
       IF (WC%BOUNDARY_TYPE==NULL_BOUNDARY) CYCLE
       SF => SURFACE(WC%SURF_INDEX)
       CALL NEAR_SURFACE_GAS_VARIABLES_KERNEL(M,T,SF,BC,B1,WALL_INDEX=IW)
       IF (HT_1D_FLAG .AND. SF%THERMAL_BC_INDEX==THERMALLY_THICK) &
          B1%HEAT_TRANS_COEF = HEAT_TRANSFER_COEFFICIENT(M,T,B1%TMP_G-B1%TMP_F,SF,WALL_INDEX_IN=IW)
    ENDDO
